fixed github overlapping header

--- a/src/index.scss
+++ b/src/index.scss
@@ -84,7 +84,7 @@ header {
   display: block;
   height: $navHeight;
   position: fixed;
-  z-index: 2;
+  z-index: 5;
 
   .inner {
     height: 100%;
